--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -62,7 +62,7 @@ body {
 
 .sidebar-observation-item.selected {
   background: #e6f7fa;
-  color: #16b1c7;
+  color: #1da5fe;
   font-weight: 500;
 }
 
