--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,40 @@
+@import "~bootstrap/scss/functions";
 // Variables
+// Prefix for :root CSS variables
+
+$variable-prefix:             bs- ; // Deprecated in v5.2.0 for the shorter `$prefix`
+$prefix:                      $variable-prefix ;
+
+// Color system
+// scss-docs-start gray-color-variables
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #eff2f7;
+$gray-300: #f1f5f7;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #74788d;
+$gray-700: #343a40;
+$gray-800: #252b3b;
+$gray-900: #1d222e;
+$black: #000;
+// scss-docs-end gray-color-variables
+
+// fusv-disable
+// scss-docs-start gray-colors-map
+$grays: (
+  "100": $gray-100,
+  "200": $gray-200,
+  "300": $gray-300,
+  "400": $gray-400,
+  "500": $gray-500,
+  "600": $gray-600,
+  "700": $gray-700,
+  "800": $gray-800,
+  "900": $gray-900
+) ;
+// scss-docs-end gray-colors-map
+// fusv-enable
 
 //
 // custom-variables
@@ -77,38 +113,6 @@ $font-family-secondary: "Work Sans", sans-serif;
 //
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-
-// Color system
-
-// scss-docs-start gray-color-variables
-$white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #eff2f7;
-$gray-300: #f1f5f7;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #74788d;
-$gray-700: #343a40;
-$gray-800: #252b3b;
-$gray-900: #1d222e;
-$black: #000;
-// scss-docs-end gray-color-variables
-
-// fusv-disable
-// scss-docs-start gray-colors-map
-$grays: (
-  "100": $gray-100,
-  "200": $gray-200,
-  "300": $gray-300,
-  "400": $gray-400,
-  "500": $gray-500,
-  "600": $gray-600,
-  "700": $gray-700,
-  "800": $gray-800,
-  "900": $gray-900
-) ;
-// scss-docs-end gray-colors-map
-// fusv-enable
 
 // scss-docs-start color-variables
 $blue: #0bb197;
@@ -464,11 +468,6 @@ $enable-important-utilities:  true ;
 $enable-dark-mode:            true ;
 $color-mode-type:             data ; // `data` or `media-query`
 
-// Prefix for :root CSS variables
-
-$variable-prefix:             bs- ; // Deprecated in v5.2.0 for the shorter `$prefix`
-$prefix:                      $variable-prefix ;
-
 // Gradient
 //
 // The gradient which is added to components if `$enable-gradients` is `true`
@@ -643,6 +642,9 @@ $component-active-color:      $white ;
 $component-active-bg:         $primary ;
 
 // scss-docs-start focus-ring-variables
+$input-btn-focus-width:         0.15rem ;
+$input-btn-focus-color-opacity: 0.25;
+$input-btn-focus-color:         rgba($component-active-bg, 0.25);
 $focus-ring-width:      .25rem ;
 $focus-ring-opacity:    .25 ;
 $focus-ring-color:      rgba($primary, $focus-ring-opacity) ;
