--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -68,3 +68,4 @@ File: Main Css File
 @import "custom/pages/coming-soon";
 @import "custom/pages/timeline";
 @import "custom/pages/extras-pages";
+// @import "pages/patient";
