Refactor VectorMap component colors for consistency, update Monitored component filters to streamline options, and replace Countries component with GenericData for improved dropdown settings management. Enhance EntitiesList with API integration for dynamic data fetching and CRUD operations, and update styling variables for a cohesive UI experience.

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -79,7 +79,7 @@ $footer-color: var(--#{$prefix}footer-color);
 // Horizontal nav
 $topnav-bg: #fff;
 $menu-item-color: #74788d;
-$menu-item-active-color: #0bb197;
+$menu-item-active-color: #539fd2;
 
 // apex charts
 $apex-grid-color: var(--#{$prefix}tertiary-bg);
@@ -115,7 +115,7 @@ $font-family-secondary: "Work Sans", sans-serif;
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
 // scss-docs-start color-variables
-$blue: #0bb197;
+$blue: #1da5fe;
 $indigo: #564ab1;
 $purple: #5664d2;
 $pink: #e83e8c;
