--- a/src/assets/scss/custom/structure/_topbar.scss
+++ b/src/assets/scss/custom/structure/_topbar.scss
@@ -140,7 +140,7 @@
         right: 10px;
         bottom: 15px;
         height: 3px;
-        background: #0bb197;
+        background: #1da5fe;
         border-radius: 2px;
         transition: all 0.2s;
     }
