--- a/src/Pages/Settings/EntitiesList.css
+++ b/src/Pages/Settings/EntitiesList.css
@@ -1,3 +1,7 @@
 .clickable-row:hover {
   background-color: #f5f7fa !important;
+}
+
+.row-hover-gray:hover {
+  background-color: #f2f2f2 !important;
 } 
