feat: Enhance order filtering and patient management features
- Added date filtering options in OrderList component for improved order management.
- Updated NotMonitored component to include dynamic fetching of doctors and improved patient creation handling with success/error notifications.
- Refactored PatientDetail component to streamline navigation and display of patient information.
- Enhanced styling and layout in various components for better user experience and consistency.

--- a/src/assets/scss/pages/patient.scss
+++ b/src/assets/scss/pages/patient.scss
@@ -2361,3 +2361,11 @@
   background-color: #e9eef3 !important;
 }
 
+.table th, .table td, th, td {
+  text-align: center;
+}
+
+td > .d-flex {
+  justify-content: center !important;
+}
+
