feat: Enhance patient management and UI components
- Added new API endpoints for fetching monitored and not monitored patients.
- Updated PatientsMonitored and NotMonitored components to utilize the new API for dynamic data fetching.
- Introduced consent forms functionality in PatientDetail, allowing retrieval and display of consent forms for patients.
- Refactored various components to improve state management and user experience, including updates to the UserPanel and Dashboard.
- Enhanced styling and layout across patient-related components for better responsiveness and usability.

--- a/src/assets/scss/pages/patient.scss
+++ b/src/assets/scss/pages/patient.scss
@@ -2387,3 +2387,17 @@ td > .d-flex {
   display: inline-block;
 }
 
+.message {
+  .p-2.rounded.bg-primary,
+  .p-2.rounded.bg-light {
+    // Remove default border-radius
+    border-radius: 0;
+  }
+  .p-2.rounded.bg-primary {
+    border-radius: 20px 20px 6px 20px !important;
+  }
+  .p-2.rounded.bg-light {
+    border-radius: 20px 20px 20px 6px !important;
+  }
+}
+
