feat: Add address and gender fields to patient forms; implement 3D treatment plan management
- Introduced new fields for gender, address, zip code, city, state, and country in PatientsMonitored and NotMonitored components.
- Implemented dynamic fetching of countries, states, and cities based on user selections.
- Enhanced PatientDetail component to include new address and gender information.
- Added functionality for creating, updating, and deleting 3D treatment plans with appropriate API integration.
- Improved UI components for better user experience and responsiveness.

--- a/src/assets/scss/pages/patient.scss
+++ b/src/assets/scss/pages/patient.scss
@@ -2375,6 +2375,9 @@
 td > .d-flex {
   justify-content: center !important;
 }
+.treatment-plan-3d-section{
+  height: 85%;
+}
 
 .treatment-plan-3d-section .approval-badge {
   font-size: 0.9rem;
