feat: Enhance patient forms and settings with new address fields and FAQs management
- Updated PatientsMonitored and NotMonitored components to include an additional address line field.
- Implemented dynamic fetching of countries, states, and cities in the PatientDetail component for improved user experience.
- Added new FAQs management functionality, including API integration for fetching, adding, updating, and deleting FAQs.
- Enhanced the settings page to include a section for managing FAQs, improving overall navigation and usability.

--- a/src/assets/scss/pages/patient.scss
+++ b/src/assets/scss/pages/patient.scss
@@ -2373,7 +2373,7 @@
 // }
 
 td > .d-flex {
-  justify-content: center !important;
+  justify-content: unset !important;
 }
 .treatment-plan-3d-section{
   height: 85%;
