--- a/src/assets/scss/pages/patient.scss
+++ b/src/assets/scss/pages/patient.scss
@@ -2368,9 +2368,9 @@
 // .table tbody td {
 //   text-align: left;
 // }
-// .table tbody td:last-child, .table thead th:last-child {
-//   text-align: left;
-// }
+.table tbody td:last-child, .table thead th:last-child, td > .d-flex {
+  text-align: left;
+}
 
 td > .d-flex {
   justify-content: unset !important;
