--- a/src/components/Common/PageTransition.scss
+++ b/src/components/Common/PageTransition.scss
@@ -149,6 +149,8 @@
   width: 100%;
   min-height: 100vh;
   background: inherit;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 // Prevent flash of unstyled content during transitions
